<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TiendaFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/tituloTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/fondo_emogis"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/PuntosTienda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puntos_0T"
            android:layout_gravity="center|end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tienda"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/fondo_emogis"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloTienda">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagenFruta"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/trofeo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TituloFruta"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/felicitaciones"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagenFruta"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TituloPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50p"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/PuntosFruta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/TituloFruta"
                app:layout_constraintTop_toTopOf="@+id/PuntosFruta"
                app:layout_constraintVertical_bias="0.476" />

            <Button
                android:id="@+id/PuntosFruta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde"
                android:text="@string/comprar"
                android:textColor="@color/fondo_emogis"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.631"
                app:layout_constraintStart_toEndOf="@+id/imagenFruta"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.919" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>